--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "open-dialog",
-  "main": "open-dialog.js",
+  "name": "filer-dialogs",
+  "main": "filer-dialogs.js",
   "version": "0.0.0",
   "authors": [
     "scottdowne <scott.downe@gmail.com>"
